Use line breaks from prevent lines that are too long, remove useless style declaration

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -125,7 +125,6 @@ img.vertical {
   border: none;
   color: whitesmoke;
   cursor: pointer;
-  display: inline-block;
   float: right;
   font-size: 16px;
   height: 25px;
